dhall/tests/type-inference/failure/unit/MergeAlternativeHasNoHandler.txt
Type error: error: MergeVariantMissingHandler
 --> <current file>:1:1
  |
1 | merge {=} (< x : Bool >.x True)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ MergeVariantMissingHandler
  |
